# ANTS

./: .pre-commit-config.yaml  CONTRIBUTING.rst  INSTALL.rst  README.rst  environment.yml  generate_data.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci-code-style.yml  ci-unit-tests.yml
docs/source/: about.rst  accessibility.rst  antslaunch.rst  common.txt  conf.py  contributing.rst  glossary.rst  index.rst  tutorial_KGO.rst  tutorial_application.rst  tutorial_rose_stem.rst  tutorial_sources.rst  tutorials.rst
docs/source/_templates/: accessibility.html
docs/source/release_notes/: 3.0.rst  3.1.rst  4.0.rst  index.rst
lib/ants/: __init__.py  _version.py  config.py  exceptions.py
lib/ants/analysis/: __init__.py  _merge.py
lib/ants/application/: __init__.py  cli.py
lib/ants/apps/: ancil_general_regrid.py
lib/ants/cli/: ancil_fill_n_merge.py  ancil_general_regrid.py
lib/ants/fileformats/: raster.py
lib/ants/fileformats/ancil/: __init__.py
lib/ants/fileformats/netcdf/: cf.py
lib/ants/fileformats/pp/: __init__.py
lib/ants/io/: load.py  save.py
lib/ants/tests/: __init__.py  test_coding_standards.py  test_dependencies.py
lib/ants/tests/analysis/: test_find_similar_region.py  test_find_small_feature_seed_points.py  test_floodfill.py  test_integration.py  test_make_consistent_with_lsm.py  test_mean.py  test_merge.py  test_stdev.py
lib/ants/tests/analysis/cover_mapping/: test_fetch_lct_slices.py  test_normalise_fractions.py
lib/ants/tests/analysis/merge/: test_FillMissingPoints.py  test_KDTreeFill.py  test_MooreNeighbourhood.py  test_UMSpiralSearch.py  test__add_halo.py  test_blend_data.py  test_derive_mask.py  test_horizontal_grid_reorder.py  test_merge.py  test_moore_neighbourhood_search.py
lib/ants/tests/command_parse/: test_integration.py
lib/ants/tests/config/: test_GlobalConfiguration.py  test__populate_config.py  test_dirpath_writeable.py  test_filepath_readable.py  test_formatted_time.py  test_set_temporary_directory.py
lib/ants/tests/constraints/: test_ExtractConstraint.py  test_extract_overlap.py
lib/ants/tests/coord_systems/: test_CFCRS.py  test_integration.py
lib/ants/tests/decomposition/: test_DomainDecompose.py  test_MosaicBySplit.py  test_MultiprocessingDomainDecompose.py  test__guess_split.py  test__mosaic_by_nsplits.py  test_decompose.py  test_integration.py
lib/ants/tests/fileformats/: test_integration.py  test_load_grid.py  test_update_history_cmd.py
lib/ants/tests/fileformats/_json/: test_JLoader.py  test_integration.py
lib/ants/tests/fileformats/ancil/: test_CallbackUM.py  test__Field3.py  test__cubes_to_AncilFile.py  test__fetch_grid_staggering_from_file.py  test__get_Field3.py  test_integration.py  test_load_um_cubes.py  test_load_um_cubes_32bit_ieee.py
lib/ants/tests/fileformats/namelist/: test_CAPGrid.py  test_CAPGridRegular.py  test_CAPGridVariable.py  test_NamelistGrid.py  test_VerticalLevels.py  test_apply_um_conventions.py  test_integration.py  test_load_cap_horizontal.py  test_load_um_vertical.py
lib/ants/tests/fileformats/pp/: test_CallbackPP.py  test_cube2pp.py  test_field_filter.py  test_field_filter_strict.py  test_load_cubes.py  test_pp2cubes.py  test_sorted_ppfields.py
lib/ants/tests/regrid/: test_integration.py
lib/ants/tests/resources/: README.rst
lib/ants/tests/utils/: test_transform_bbox.py
lib/ants/utils/: cube.py
recipes/: ancil_general_regrid.conf  ancil_general_regrid_grid_to_variable_resolution_grid.conf
rose-stem/: flow.cylc
rose-stem/app/black/: rose-app.conf
rose-stem/app/flake8/: rose-app.conf
rose-stem/app/install_cold/: rose-app.conf
rose-stem/app/isort/: rose-app.conf
rose-stem/app/unittests/: rose-app.conf
utils/generate_logs/: durations_main.py
utils/plot_comparisons/: plot_comparisons.py  plot_comparisons_utils.py  plot_generator.py
(+69 files in other folders)
